...
                                              const Duration(milliseconds: 100),
                                          curve: Curves.bounceOut);
                                    }
                                  : null,
                          child: const Text('Anterior')),
                      ElevatedButton(
                          key: const Key('proximo'),
                          onPressed:
                              snapshot.data != null && snapshot.data == true
                                  ? () {
                                      controllerPage.nextPage(
                                          duration:
                                              const Duration(milliseconds: 100),
...
